--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ button.pushed {
 }
 
 .selected {
-  background: linear-gradient(red, orange, yellow, green, blue, purple);
+  background: linear-gradient(red, orange, yellow, green, blue, purple) !important;
 }
 
 #targetinfo {
