--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ html {
 .tt:hover .tx {
   display: block;
   z-index: 6;
+  font-size: 16px;
 }
 
 #playmat {
@@ -33,9 +34,11 @@ html {
 .card {
   position: absolute;
   color: black;
-  width: 50px;
-  height: 70px;
+  width: 42px;
+  height: 62px;
   border-radius: 3px;
+  border: 4px solid rgba(0, 0, 0, 0);
+  font-size: 12px;
 }
 
 .card.tapped {
@@ -63,54 +66,38 @@ html {
   transition: 1s;
 }
 
-.valid {
-  border: 2px solid greenyellow;
-}
-
-.endturn,
+#endturn,
 #confirm,
-.pass,
-.endphase {
+#pass,
+#endphase {
   position: absolute;
   right: 10px;
   height: 30px;
-  border: none;
   border-radius: 20px;
   padding: 0 20px 0 20px;
+  top: calc(50% - 15px);
 }
 
-.pass {
+#pass {
   right: 132px;
 }
 
-.endphase {
+#pass:not(.pushed) {
+  background: yellow;
+}
+
+#endphase {
   right: 75px;
 }
 
-#p0buttons>button {
-  top: calc(45% - 15px);
-}
-
-#p1buttons>button {
-  top: calc(55% - 15px);
-}
-
-#confirm {
-  top: calc(50% - 15px);
+button.cool:hover {
+  background: lawngreen;
 }
 
 button,
 .tt,
 #targetinfo {
   transition: 0.2s;
-}
-
-button.dangerous:hover {
-  background: #afa;
-}
-
-button.cool:hover {
-  background: #afa;
 }
 
 button.pushed {
@@ -166,13 +153,56 @@ hline {
   position: absolute;
   text-align: right;
   right: 10px;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.valid {
+  border: 4px solid orange;
 }
 
 .selected {
-  animation: selected 0.6s alternate-reverse infinite;
+  border: 4px solid yellow;
 }
 
-@keyframes selected {
-  0% {background: red;}
-  100% {background: yellow;}
+#optcontainer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+#optchooser {
+  position: absolute;
+  text-align: center;
+  background: gray;
+  left: 25%;
+  width: 50%;
+  top: 10px;
+  /*height: 300px;*/
+  z-index: 10;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+#optlist>div,
+#optsubmit {
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  background: rgba(200, 200, 200, 0.5);
+  transition: 0.3s;
+  user-select: none;
+}
+
+#optlist>div.chosen {
+  background: rgba(0, 0, 200, 0.5);
+}
+
+#optsubmit {
+  background: yellow;
+}
+
+#optsubmit.submittable {
+  background: lime;
 }
