--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 
 .tt {
   position: absolute;
+  text-align: left;
   user-select: none;
 }
 
@@ -14,6 +15,7 @@ html {
   padding: 10px;
   background: white;
   color: black;
+  text-align: left;
   display: none;
 }
 
@@ -31,14 +33,18 @@ html {
   opacity: 35%;
 }
 
-.card {
-  position: absolute;
+.card,
+#piles>div {
   color: black;
   width: 42px;
   height: 62px;
   border-radius: 3px;
   border: 4px solid rgba(0, 0, 0, 0);
   font-size: 12px;
+}
+
+.card:not(.noabs) {
+  position: absolute;
 }
 
 .card.tapped {
@@ -114,8 +120,8 @@ button.pushed {
   position: absolute;
   left: 0;
   width: 25vw;
-  height: 50vh;
-  top: calc(50% - 25vh);
+  height: 40vh;
+  top: calc(50% - 20vh);
   padding: 10px;
   font-size: 15px;
 }
@@ -205,4 +211,21 @@ hline {
 
 #optsubmit.submittable {
   background: lime;
+}
+
+#piles>div {
+  position: absolute;
+  left: 10px;
+}
+
+#pileviewer {
+  position: absolute;
+  text-align: center;
+  left: 20vw;
+  top: 10px;
+  width: 60vw;
+  height: 200px;
+  border-radius: 10px;
+  background: gray;
+  padding: 10px;
 }
