--- a/style.css
+++ b/style.css
@@ -51,10 +51,6 @@ html {
   color: #aaa;
 }
 
-/*.card.tapped::after {
-  content: " (tapped)";
-}*/
-
 .card.tt>.tx::first-line {
   line-height: 25px;
 }
@@ -102,6 +98,8 @@ button.cool:hover {
 
 button,
 .tt,
+.clickablemana,
+.clickablegen,
 #targetinfo {
   transition: 0.2s;
 }
@@ -171,28 +169,27 @@ hline {
   border: 4px solid yellow;
 }
 
-#optcontainer {
+.container {
   position: absolute;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
 }
 
-#optchooser {
+.contained {
   position: absolute;
   text-align: center;
   background: gray;
   left: 25%;
   width: 50%;
   top: 10px;
-  /*height: 300px;*/
   z-index: 10;
   padding: 10px;
   border-radius: 10px;
 }
 
 #optlist>div,
-#optsubmit {
+.submitter {
   padding: 10px;
   margin: 10px;
   border-radius: 10px;
@@ -205,12 +202,17 @@ hline {
   background: rgba(0, 0, 200, 0.5);
 }
 
-#optsubmit {
-  background: yellow;
+.submitter {
+  background: #ddd;
 }
 
-#optsubmit.submittable {
-  background: lime;
+.submitter:not(.submittable) {
+  opacity: 70%;
+  color: gray;
+}
+
+.submittable:hover {
+  background: lawngreen;
 }
 
 #piles>div {
@@ -228,4 +230,50 @@ hline {
   border-radius: 10px;
   background: gray;
   padding: 10px;
+}
+
+#pccgrid {
+  position: absolute;
+  text-align: center;
+  background: gray;
+  left: 20%;
+  width: 60%;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "t t"
+    "l r"
+    "b b"
+    "c c";
+}
+
+#topbit {
+  grid-area: t;
+  margin-bottom: 20px;
+}
+
+#pccsymbols {
+  grid-area: r;
+}
+
+#pcctopay {
+  grid-area: l;
+}
+
+#pccgeneric {
+  margin-top: 20px;
+  grid-area: b;
+}
+
+#pccsubmit {
+  grid-area: c;
+}
+
+button:not(.pushed):not(.submitter:not(.submittable)), .clickablemana, .clickablegen {
+  cursor: pointer;
+}
+
+.selectedmana {
+  background: pink;
 }
